# logitech_bcc950

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bcc950_control.py
demos/: README.md  basic_embodied.py
demos/embodied/: __init__.py  agent.py  conversation.py  creature.py  listener.py  lua_motor.py  memory.py  motor.py  sensorium.py  speaker.py  thinking.py  tools.py  vision.py  web.py
demos/vision/: calibration.py  motion_tracker.py  movement_verifier.py
demos/voice/: narrator.py  requirements.txt  voice_control.py
docs/: architecture.md  lua_llm_integration.md  setup_guide.md  usage_scenarios.md  vision_testing.md
samples/: basic_ptz.py  native_ptz.py  video_stream.py
scripts/: auto_tune.py  bcc950_control.sh  generate_report.py  setup.sh  verify_hardware.py
src/bindings/: pybind11_bindings.cpp
src/cpp/: CMakeLists.txt
src/cpp/include/bcc950/: config.hpp  constants.hpp  controller.hpp  motion.hpp  position.hpp  presets.hpp  v4l2_device.hpp
src/cpp/src/: config.cpp  controller.cpp  main.cpp  motion.cpp  position.cpp  presets.cpp  v4l2_device.cpp
src/cpp/tests/: CMakeLists.txt  mock_v4l2_device.hpp  test_config.cpp  test_controller.cpp  test_motion.cpp  test_position.cpp  test_presets.cpp
src/python/: pyproject.toml
src/python/bcc950/: __init__.py  cli.py  config.py  constants.py  controller.py  discovery.py  motion.py  motion_verify.py  native_backend.py  position.py  presets.py  v4l2_backend.py
src/python/tests/: conftest.py
src/python/tests/integration/: test_camera_basic.py  test_camera_presets.py
src/python/tests/unit/: test_config.py  test_controller.py  test_motion.py  test_position.py  test_presets.py
src/python/tests/vision/: conftest.py  cv_utils.py  test_pan_verify.py  test_tilt_verify.py  test_zoom_verify.py
